'first stage of the project, you can play infinite mode'

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         </div>
         <div class="answers">
           <ul class="answerList">
-            <li><input type="radio" id="0" name="possible-ans" value="0" /><label for="0"></label></li>
-            <li><input type="radio" id="1" name="possible-ans" value="1" /><label for="1"></label></li>
-            <li><input type="radio" id="2" name="possible-ans" value="2" /><label for="2"></label></li>
-            <li><input type="radio" id="3" name="possible-ans" value="3" /><label for="3"></label></li>
+            <li id="0"><input type="radio" name="possible-ans"/><label></label></li>
+            <li id="1"><input type="radio" name="possible-ans"/><label></label></li>
+            <li id="2"><input type="radio" name="possible-ans"/><label></label></li>
+            <li id="3"><input type="radio" name="possible-ans"/><label></label></li>
           </ul>
         </div>
         <button class="submitAns">Submit</button>
